整理nginx配置文件，添加静态文件过期时间

--- a/project/chat_forum_more_project/web/nginx_setting/2_nginx_master_son.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/2_nginx_master_son.conf
@@ -1,14 +1,14 @@
-upstream sonhost.you.com {
+upstream son.lun.com {
     server 127.0.0.1:86 weight=1 max_fails=3 fail_timeout=15;
     server 127.0.0.1:87 weight=1 max_fails=3 fail_timeout=15;
 }
 
 server {
     listen 80;
-    server_name  *.son.you.com;
+    server_name *.you.com;
 
     set $cors_origin "";
-    if ($http_origin ~* "^http://*.son.you.com$") {
+    if ($http_origin ~* "^http://*.you.com$") {
         set $cors_origin $http_origin;
     }
     add_header Access-Control-Allow-Origin $cors_origin;
@@ -19,6 +19,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Scheme  $scheme;
 
-        proxy_pass http://sonhost.you.com;
+        proxy_pass http://son.lun.com;
     }
 }
