--- a/project/chat_forum_more_project/web/nginx_setting/4_nginx_slove_son.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/4_nginx_slove_son.conf
@@ -1,7 +1,7 @@
 server {
-        listen        88;
-        server_name  *.storage.you.com;
-        root   "/usr/local/storage";
+        listen        87;
+        server_name  *.you.com;
+        root   "/usr/local/project1_static_resource_slove_1";
 
         location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
         {
