--- a/project/chat_forum_more_project/web/nginx_setting/2_nginx_master.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/2_nginx_master.conf
@@ -1,17 +1,14 @@
-upstream you.com {
+upstream lun.com {
     server 127.0.0.1:86 weight=1 max_fails=3 fail_timeout=15;
     server 127.0.0.1:87 weight=1 max_fails=3 fail_timeout=15;
 }
 
 server {
     listen 80;
-    server_name  d.project.ren;
+    server_name you.com;
 
     set $cors_origin "";
     if ($http_origin ~* "^http://you.com$") {
-        set $cors_origin $http_origin;
-    }
-    if ($http_origin ~* "^https://you.ren$") {
         set $cors_origin $http_origin;
     }
     add_header Access-Control-Allow-Origin $cors_origin;
@@ -22,6 +19,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Scheme  $scheme;
 
-        proxy_pass http://you.com;
+        proxy_pass http://lun.com;
     }
 }
