--- a/project/chat_forum_more_project/web/nginx_setting/4_nginx_slove.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/4_nginx_slove.conf
@@ -1,7 +1,19 @@
 server {
         listen        87;
-        server_name  slove_87.you.com;
+        server_name  you.com;
         root   "/usr/local/project1_static_resource_slove_2";
+
+        location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
+        {
+            expires 99d;
+            access_log off;
+        }
+
+        location ~ \.(js|css)$
+        {
+            expires 99d;
+        }
+
         location / {
             index index.html;
         }
