优化代码，修改nginx配置，localstorage、静态资源跟、api、地址分开，localstorage文件单独列出

--- a/project/chat_forum_more_project/web/nginx_setting/2_nginx_master.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/2_nginx_master.conf
@@ -1,4 +1,4 @@
-upstream lun.com {
+upstream you.com {
     server 127.0.0.1:86 weight=1 max_fails=3 fail_timeout=15;
     server 127.0.0.1:87 weight=1 max_fails=3 fail_timeout=15;
 }
@@ -19,6 +19,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Scheme  $scheme;
 
-        proxy_pass http://lun.com;
+        proxy_pass http://you.com;
     }
 }
