--- a/project/chat_forum_more_project/web/nginx_setting/3_nginx_master_static_resource.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/3_nginx_master_static_resource.conf
@@ -1,13 +1,14 @@
-upstream storage.you.com {
-    server 127.0.0.1:88;
+upstream static_resource.you.com {
+    server 127.0.0.1:86 weight=1 max_fails=3 fail_timeout=15;
+    server 127.0.0.1:87 weight=1 max_fails=3 fail_timeout=15;
 }
 
 server {
     listen 80;
-    server_name  *.storage.you.com;
+    server_name *.static_resource.you.com;
 
     set $cors_origin "";
-    if ($http_origin ~* "^http://*.storage.you.com$") {
+    if ($http_origin ~* "^http://*.static_resource.you.com$") {
         set $cors_origin $http_origin;
     }
     add_header Access-Control-Allow-Origin $cors_origin;
@@ -18,6 +19,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Scheme  $scheme;
 
-        proxy_pass http://storage.you.com;
+        proxy_pass http://static_resource.you.com;
     }
 }
