--- a/project/chat_forum_more_project/web/nginx_setting/3_nginx_slove_static_resource_86.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/3_nginx_slove_static_resource_86.conf
@@ -1,6 +1,6 @@
 server {
         listen        86;
-        server_name  *.you.com;
+        server_name *.static_resource.you.com;
         root   "/usr/local/project1_static_resource_slove_1";
 
         location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
