--- a/project/chat_forum_more_project/web/nginx_setting/5_nginx_storage_slove_89.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/5_nginx_storage_slove_89.conf
@@ -1,7 +1,7 @@
 server {
-        listen        87;
-        server_name  *.you.com;
-        root   "/usr/local/project1_static_resource_slove_1";
+        listen        89;
+        server_name  *.storage.you.com;
+        root   "/usr/local/storage";
 
         location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
         {
