--- a/project/chat_forum_more_project/web/nginx_setting/5_nginx_storage_master.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/5_nginx_storage_master.conf
@@ -1,14 +1,14 @@
-upstream son.lun.com {
-    server 127.0.0.1:86 weight=1 max_fails=3 fail_timeout=15;
-    server 127.0.0.1:87 weight=1 max_fails=3 fail_timeout=15;
+upstream storage.com {
+    server 127.0.0.1:88;
+    server 127.0.0.1:89;
 }
 
 server {
     listen 80;
-    server_name *.you.com;
+    server_name  *.storage.you.com;
 
     set $cors_origin "";
-    if ($http_origin ~* "^http://*.you.com$") {
+    if ($http_origin ~* "^http://*.storage.you.com$") {
         set $cors_origin $http_origin;
     }
     add_header Access-Control-Allow-Origin $cors_origin;
@@ -19,6 +19,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Scheme  $scheme;
 
-        proxy_pass http://son.lun.com;
+        proxy_pass http://storage.com;
     }
 }
