--- a/project/chat_forum_more_project/web/nginx_setting/3_nginx_slove_static_resource_86.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/3_nginx_slove_static_resource_86.conf
@@ -3,6 +3,12 @@ server {
         server_name *.static_resource.you.com;
         root   "/usr/local/project1_static_resource_slove_1";
 
+        set $cors_origin "";
+        if ($http_origin ~* "^http://you.com$") {
+            set $cors_origin $http_origin;
+        }
+        add_header Access-Control-Allow-Origin $cors_origin;
+
         location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
         {
             expires 999d;
