静态文件放主服务器，不再放在docker。动态请求静态文件，为后面增量更新准备

--- a/project/chat_forum_more_project/web/nginx_setting/2_nginx_master.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/2_nginx_master.conf
@@ -1,11 +1,7 @@
-upstream you.com {
-    server 127.0.0.1:86 weight=1 max_fails=3 fail_timeout=15;
-    server 127.0.0.1:87 weight=1 max_fails=3 fail_timeout=15;
-}
-
 server {
     listen 80;
     server_name you.com;
+    root   "/usr/local/white/buckup/www/myself/project/chat_forum_more_project/web/";
 
     set $cors_origin "";
     if ($http_origin ~* "^http://you.com$") {
@@ -13,12 +9,23 @@ server {
     }
     add_header Access-Control-Allow-Origin $cors_origin;
 
+    location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
+    {
+        expires 999d;
+        access_log off;
+    }
+
+    location ~ \.(js|css)$
+    {
+        expires 999d;
+    }
+
     location / {
+        index index.html;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Scheme  $scheme;
-
-        proxy_pass http://you.com;
     }
 }
