--- a/project/chat_forum_more_project/web/nginx_setting/5_storage.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/5_storage.conf
@@ -1,11 +1,7 @@
-upstream storage.com {
-    server 127.0.0.1:88;
-    server 127.0.0.1:89;
-}
-
 server {
     listen 80;
     server_name  *.storage.you.com;
+    root   "/usr/local/white/buckup/www/myself/project/chat_forum_more_project/localstorage/";
 
     set $cors_origin "";
     if ($http_origin ~* "^http://*.storage.you.com$") {
@@ -13,12 +9,23 @@ server {
     }
     add_header Access-Control-Allow-Origin $cors_origin;
 
+    location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
+    {
+        expires 999d;
+        access_log off;
+    }
+
+    location ~ \.(js|css)$
+    {
+        expires 999d;
+    }
+
     location / {
+        index index.html;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Scheme  $scheme;
-
-        proxy_pass http://storage.com;
     }
 }
