--- a/project/chat_forum_more_project/web/nginx_setting/1_2_js_dynamic.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/1_2_js_dynamic.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name *.static_resource.you.com;
+    server_name *.js_dynamic.you.com;
     root   "/usr/local/white/buckup/www/myself/project/chat_forum_more_project/web/controller/";
 
     # #设置跨域配置 Start
@@ -31,6 +31,6 @@ server {
         include        fastcgi_params;
     }
 
-    access_log  /www/server/nginx/logs/static_resource_you_com_access.log main;
-    error_log  /www/server/nginx/logs/static_resource_you_com_error.log;
+    access_log  /www/server/nginx/logs/js_dynamic_access.log main;
+    error_log  /www/server/nginx/logs/js_dynamic_error.log;
 }
