优化，全部可请求自己服务器的全部修改为请求自己服务器，依赖localstorage 静态资源本地化，减少请求时间（网络速度限制的情况下）

--- a/project/chat_forum_more_project/web/nginx_setting/0_img_nginx.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/0_img_nginx.conf
@@ -14,4 +14,11 @@ server {
         expires 999d;
         access_log off;
     }
+
+    location ~ .*\.(ico)
+    {
+        expires 999d;
+        access_log off;
+        add_header Pragma Pragma;
+    }
 }
