--- a/project/chat_forum_more_project/web/nginx_setting/2_master.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/2_master.conf
@@ -15,9 +15,17 @@ server {
         access_log off;
     }
 
+    location ~ .*\.(ico)
+    {
+        expires 999d;
+        access_log off;
+        add_header Pragma Pragma;
+    }
+
     location ~ \.(js|css)$
     {
         expires 999d;
+        access_log off;
     }
 
     location / {
