--- a/project/chat_forum_more_project/web/nginx_setting/1_static_resource_3.conf
+++ b/project/chat_forum_more_project/web/nginx_setting/1_static_resource_3.conf
@@ -1,7 +1,6 @@
 server {
     listen 80;
-    server_name *.css_dynamic.you.com;
-    root   "/usr/local/white/buckup/www/myself/project/chat_forum_more_project/web/controller/";
+    server_name *.static_resource_3.com;
 
     # #设置跨域配置 Start
     set $cors_origin "";
@@ -21,6 +20,7 @@ server {
     }
 
     location ~ \.php$ {
+        root   "/usr/local/white/buckup/www/myself/project/chat_forum_more_project/web/controller/";
         # 设置监听端口
         fastcgi_pass  unix:/tmp/php-cgi-71.sock;
         # 设置nginx的默认首页文件(上面已经设置过了，可以删除)
@@ -31,6 +31,14 @@ server {
         include        fastcgi_params;
     }
 
-    access_log  /www/server/nginx/logs/css_dynamic_access.log main;
-    error_log  /www/server/nginx/logs/css_dynamic_error.log;
+    location ~ \.css$ {
+        root   "/usr/local/white/buckup/www/myself/project/chat_forum_more_project/web/static_resource/css/";
+    }
+
+    location ~ \.js$ {
+        root   "/usr/local/white/buckup/www/myself/project/chat_forum_more_project/web/static_resource/js/";
+    }
+
+    access_log  /www/server/nginx/logs/static_resource_3_access.log main;
+    error_log  /www/server/nginx/logs/static_resource_3_error.log;
 }
